Fix Camera and Deep Sleep #1: defconfig

--- a/arch/x86/configs/x86_64_moor_defconfig
+++ b/arch/x86/configs/x86_64_moor_defconfig
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/x86_64 3.10.20 Kernel Configuration
+# Linux/x86 3.10.20 Kernel Configuration
 #
 CONFIG_64BIT=y
 CONFIG_X86_64=y
@@ -32,7 +32,6 @@ CONFIG_NEED_PER_CPU_EMBED_FIRST_CHUNK=y
 CONFIG_NEED_PER_CPU_PAGE_FIRST_CHUNK=y
 CONFIG_ARCH_HIBERNATION_POSSIBLE=y
 CONFIG_ARCH_SUSPEND_POSSIBLE=y
-CONFIG_HIBERNATION=n
 CONFIG_ZONE_DMA32=y
 CONFIG_AUDIT_ARCH=y
 CONFIG_ARCH_SUPPORTS_OPTIMIZED_INLINING=y
@@ -46,16 +45,12 @@ CONFIG_DEFCONFIG_LIST="/lib/modules/$UNAME_RELEASE/.config"
 CONFIG_IRQ_WORK=y
 CONFIG_BUILDTIME_EXTABLE_SORT=y
 
-CONFIG_MRD7=n
-CONFIG_MRD8=n
-CONFIG_MRD7P05=n
-
 #
 # General setup
 #
 CONFIG_INIT_ENV_ARG_LIMIT=32
 CONFIG_CROSS_COMPILE=""
-CONFIG_LOCALVERSION=""
+CONFIG_LOCALVERSION="_Ael_Zen_v1"
 CONFIG_LOCALVERSION_AUTO=y
 CONFIG_HAVE_KERNEL_GZIP=y
 CONFIG_HAVE_KERNEL_BZIP2=y
@@ -68,10 +63,7 @@ CONFIG_KERNEL_GZIP=y
 # CONFIG_KERNEL_XZ is not set
 # CONFIG_KERNEL_LZO is not set
 CONFIG_DEFAULT_HOSTNAME="(none)"
-CONFIG_SWAP=y
-CONFIG_ZRAM=y
-CONFIG_ZRAM_DEBUG=n
-CONFIG_FRONTSWAP=n
+# CONFIG_SWAP is not set
 CONFIG_SYSVIPC=y
 CONFIG_SYSVIPC_SYSCTL=y
 CONFIG_POSIX_MQUEUE=y
@@ -230,13 +222,10 @@ CONFIG_OPROFILE=y
 # CONFIG_OPROFILE_EVENT_MULTIPLEX is not set
 CONFIG_HAVE_OPROFILE=y
 CONFIG_OPROFILE_NMI_TIMER=y
-CONFIG_KPROBES=y
 # CONFIG_JUMP_LABEL is not set
-CONFIG_KPROBES_ON_FTRACE=y
 # CONFIG_HAVE_64BIT_ALIGNED_ACCESS is not set
 CONFIG_HAVE_EFFICIENT_UNALIGNED_ACCESS=y
 CONFIG_ARCH_USE_BUILTIN_BSWAP=y
-CONFIG_KRETPROBES=y
 CONFIG_HAVE_IOREMAP_PROT=y
 CONFIG_HAVE_KPROBES=y
 CONFIG_HAVE_KRETPROBES=y
@@ -331,10 +320,9 @@ CONFIG_IOSCHED_NOOP=y
 # CONFIG_IOSCHED_DEADLINE is not set
 CONFIG_IOSCHED_CFQ=y
 # CONFIG_CFQ_GROUP_IOSCHED is not set
-CONFIG_DEFAULT_CFQ=n
-CONFIG_DEFAULT_SIOPLUS=y
+CONFIG_DEFAULT_CFQ=y
 # CONFIG_DEFAULT_NOOP is not set
-CONFIG_DEFAULT_IOSCHED="sioplus"
+CONFIG_DEFAULT_IOSCHED="cfq"
 CONFIG_ASN1=y
 CONFIG_UNINLINE_SPIN_UNLOCK=y
 CONFIG_FREEZER=y
@@ -524,7 +512,7 @@ CONFIG_CPU_FREQ_STAT_DETAILS=y
 # CONFIG_CPU_FREQ_DEFAULT_GOV_PERFORMANCE is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_POWERSAVE is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_USERSPACE is not set
-# CONFIG_CPU_FREQ_DEFAULT_GOV_ONDEMAND=y
+# CONFIG_CPU_FREQ_DEFAULT_GOV_ONDEMAND is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_CONSERVATIVE is not set
 CONFIG_CPU_FREQ_DEFAULT_GOV_INTERACTIVE=y
 CONFIG_CPU_FREQ_GOV_PERFORMANCE=y
@@ -651,19 +639,8 @@ CONFIG_INET_LRO=y
 CONFIG_INET_DIAG=y
 CONFIG_INET_TCP_DIAG=y
 # CONFIG_INET_UDP_DIAG is not set
-CONFIG_TCP_CONG_ADVANCED=y
+# CONFIG_TCP_CONG_ADVANCED is not set
 CONFIG_TCP_CONG_CUBIC=y
-CONFIG_TCP_CONG_BIC=y
-CONFIG_TCP_CONG_WESTWOOD=y
-CONFIG_TCP_CONG_HSTCP=y
-CONFIG_TCP_CONG_HYBLA=y
-CONFIG_TCP_CONG_HTCP=y
-CONFIG_TCP_CONG_VEGAS=y
-CONFIG_TCP_CONG_VENO=y
-CONFIG_TCP_CONG_SCALABLE=y
-CONFIG_TCP_CONG_LP=y
-CONFIG_TCP_CONG_YEAH=y
-CONFIG_TCP_CONG_ILLINOIS=y
 CONFIG_DEFAULT_TCP_CONG="cubic"
 CONFIG_TCP_MD5SIG=y
 CONFIG_IPV6=y
@@ -890,9 +867,7 @@ CONFIG_IP6_NF_RAW=y
 CONFIG_L2TP=y
 # CONFIG_L2TP_DEBUGFS is not set
 # CONFIG_L2TP_V3 is not set
-CONFIG_BRIDGE=n
-# CONFIG_BRIDGE_IGMP_SNOOPING=y
-CONFIG_BRIDGE_NETFILTER=y
+# CONFIG_BRIDGE is not set
 CONFIG_HAVE_NET_DSA=y
 # CONFIG_VLAN_8021Q is not set
 # CONFIG_DECNET is not set
@@ -976,13 +951,11 @@ CONFIG_RFS_ACCEL=y
 CONFIG_XPS=y
 # CONFIG_NETPRIO_CGROUP is not set
 CONFIG_BQL=y
-# CONFIG_BPF_JIT is not set
 
 #
 # Network testing
 #
 # CONFIG_NET_PKTGEN is not set
-# CONFIG_NET_TCPPROBE is not set
 # CONFIG_NET_DROP_MONITOR is not set
 # CONFIG_HAMRADIO is not set
 # CONFIG_CAN is not set
@@ -1024,18 +997,16 @@ CONFIG_RFKILL_LEDS=y
 # CONFIG_NET_9P is not set
 # CONFIG_CAIF is not set
 # CONFIG_CEPH_LIB is not set
-# CONFIG_NFC is not set
-CONFIG_HAVE_BPF_JIT=y
+CONFIG_NFC=y
 # CONFIG_NFC_NCI is not set
 # CONFIG_NFC_HCI is not set
-#
 
 #
 # Near Field Communication (NFC) devices
 #
 # CONFIG_NFC_PN533 is not set
-# CONFIG_BCM_2079x is not set
-
+CONFIG_BCM_2079x=y
+CONFIG_HAVE_BPF_JIT=y
 
 #
 # Device Drivers
@@ -1372,6 +1343,14 @@ CONFIG_WIFI_PLATFORM_DATA=y
 # CONFIG_B43 is not set
 # CONFIG_B43LEGACY is not set
 # CONFIG_BRCMFMAC is not set
+CONFIG_BCMDHD=y
+CONFIG_BCMDHD_SDIO=y
+# CONFIG_BCM4354 is not set
+CONFIG_BCM4339=y
+CONFIG_BCMDHD_FW_PATH="/system/etc/firmware/fw_bcmdhd.bin"
+CONFIG_BCMDHD_NVRAM_PATH="/system/etc/wifi/bcmdhd.cal"
+# CONFIG_DHD_USE_STATIC_BUF is not set
+CONFIG_DHD_USE_SCHED_SCAN=y
 # CONFIG_HOSTAP is not set
 # CONFIG_IPW2100 is not set
 # CONFIG_IWLWIFI is not set
@@ -1409,6 +1388,9 @@ CONFIG_INPUT_SPARSEKMAP=y
 CONFIG_INPUT_EVDEV=y
 # CONFIG_INPUT_EVBUG is not set
 CONFIG_INPUT_KEYRESET=y
+CONFIG_HALL_SENSOR=y
+# CONFIG_MR_SENSOR is not set
+# CONFIG_KXTJ9_SENSOR is not set
 
 #
 # Input Device Drivers
@@ -1516,6 +1498,7 @@ CONFIG_INPUT_TOUCHSCREEN=y
 # CONFIG_TOUCHSCREEN_W90X900 is not set
 # CONFIG_TOUCHSCREEN_ST1232 is not set
 # CONFIG_TOUCHSCREEN_TPS6507X is not set
+CONFIG_TOUCHSCREEN_FTXXXX=y
 CONFIG_INPUT_MISC=y
 # CONFIG_INPUT_AD714X is not set
 # CONFIG_INPUT_ARIZONA_HAPTICS is not set
@@ -1689,7 +1672,6 @@ CONFIG_I2C_GPIO=y
 #
 # Other I2C/SMBus bus drivers
 #
-# CONFIG_I2C_STUB is not set
 # CONFIG_I2C_DEBUG_CORE is not set
 # CONFIG_I2C_DEBUG_ALGO is not set
 # CONFIG_I2C_DEBUG_BUS is not set
@@ -1821,8 +1803,7 @@ CONFIG_GPIO_LANGWELL=y
 # CONFIG_W1 is not set
 CONFIG_POWER_SUPPLY=y
 # CONFIG_POWER_SUPPLY_CHARGER is not set
-CONFIG_POWER_SUPPLY_CHARGING_ALGO_PSE=y
-# CONFIG_POWER_SUPPLY_BATTID is not set
+CONFIG_POWER_SUPPLY_BATTID=y
 CONFIG_RAW_CC_THROTTLE=y
 # CONFIG_POWER_SUPPLY_DEBUG is not set
 # CONFIG_PDA_POWER is not set
@@ -1850,6 +1831,13 @@ CONFIG_RAW_CC_THROTTLE=y
 # CONFIG_INTEL_FUEL_GAUGE is not set
 # CONFIG_INTEL_FG_UIFACE is not set
 # CONFIG_POWER_RESET is not set
+CONFIG_ASUS_BATTERY=y
+CONFIG_ASUS_ENGINEER_MODE=y
+CONFIG_ASUS_BATTERY_POWER=y
+CONFIG_SMB1357_CHARGER=y
+# CONFIG_A500CG_BATTERY_SMB347 is not set
+CONFIG_BATTERY_MM8033=y
+CONFIG_BATTERY_MAX17058=y
 # CONFIG_POWER_AVS is not set
 CONFIG_POWERCAP=y
 CONFIG_INTEL_RAPL=y
@@ -1989,12 +1977,12 @@ CONFIG_THERMAL_GOV_STEP_WISE=y
 CONFIG_THERMAL_EMULATION=y
 # CONFIG_INTEL_POWERCLAMP is not set
 # CONFIG_SENSORS_THERMAL_MRFLD is not set
+# CONFIG_INTEL_BYT_CR_THERMAL is not set
 CONFIG_SOC_THERMAL=y
 CONFIG_TP_ENABLE=y
 # CONFIG_SENSORS_SOCDTS_INTERRUPT is not set
 CONFIG_DEBUG_THERMAL=y
 CONFIG_INTEL_MOOR_THERMAL=y
-# CONFIG_INTEL_BYT_CR_THERMAL is not set
 CONFIG_WATCHDOG=y
 # CONFIG_WATCHDOG_CORE is not set
 # CONFIG_WATCHDOG_NOWAYOUT is not set
@@ -2298,7 +2286,7 @@ CONFIG_DRM_TTM=y
 # CONFIG_DRM_QXL is not set
 # CONFIG_VGASTATE is not set
 CONFIG_VIDEO_OUTPUT_CONTROL=y
-# CONFIG_HDMI is not set
+CONFIG_HDMI=y
 CONFIG_FB=y
 # CONFIG_FIRMWARE_EDID is not set
 # CONFIG_FB_DDC is not set
@@ -2376,6 +2364,7 @@ CONFIG_BACKLIGHT_GENERIC=y
 # CONFIG_BACKLIGHT_LM3630 is not set
 # CONFIG_BACKLIGHT_LM3639 is not set
 # CONFIG_BACKLIGHT_LP855X is not set
+# CONFIG_BACKLIGHT_RT4532 is not set
 # CONFIG_ADF is not set
 
 #
@@ -2512,14 +2501,15 @@ CONFIG_SND_SST_PLATFORM=y
 # CONFIG_PRH_TEMP_WA_FOR_SPID is not set
 CONFIG_SST_DPCM=y
 CONFIG_SND_SST_MACHINE=y
+# CONFIG_A500CG_AUDIO_SETTING is not set
 CONFIG_SND_SOC_I2C_AND_SPI=y
 # CONFIG_SND_SOC_ALL_CODECS is not set
-# CONFIG_SND_SOC_ARIZONA=m
-# CONFIG_SND_SOC_WM_HUBS=m
-# CONFIG_SND_SOC_WM_ADSP=m
-# CONFIG_SND_SOC_FLORIDA=m
-# CONFIG_SND_SOC_WM8994=m
+CONFIG_SND_SOC_ARIZONA=y
+CONFIG_SND_SOC_WM_HUBS=y
+CONFIG_SND_SOC_WM_ADSP=y
 CONFIG_SND_SOC_RT5647=y
+CONFIG_SND_SOC_FLORIDA=y
+CONFIG_SND_SOC_WM8994=y
 # CONFIG_SND_SIMPLE_CARD is not set
 # CONFIG_SOUND_PRIME is not set
 
@@ -2929,6 +2919,7 @@ CONFIG_LEDS_CLASS=y
 # CONFIG_LEDS_LM355x is not set
 # CONFIG_LEDS_OT200 is not set
 # CONFIG_LEDS_BLINKM is not set
+CONFIG_LEDS_ASUS=y
 
 #
 # LED Triggers
@@ -3080,18 +3071,12 @@ CONFIG_STAGING=y
 # CONFIG_W35UND is not set
 # CONFIG_PRISM2_USB is not set
 # CONFIG_ECHO is not set
-# CONFIG_COMEDI is not set
 # CONFIG_ASUS_OLED is not set
-# CONFIG_R8187SE is not set
-# CONFIG_RTL8192U is not set
-# CONFIG_RTLLIB is not set
 # CONFIG_R8712U is not set
 # CONFIG_RTS5139 is not set
 # CONFIG_TRANZPORT is not set
 # CONFIG_LINE6_USB is not set
 # CONFIG_USB_SERIAL_QUATECH2 is not set
-# CONFIG_VT6655 is not set
-# CONFIG_VT6656 is not set
 # CONFIG_DX_SEP is not set
 CONFIG_DX_SEP54=y
 
@@ -3189,11 +3174,10 @@ CONFIG_DX_SEP54=y
 # Triggers - standalone
 #
 # CONFIG_IIO_SIMPLE_DUMMY is not set
-CONFIG_ZSMALLOC=y
+# CONFIG_ZSMALLOC is not set
 # CONFIG_FB_SM7XX is not set
 # CONFIG_CRYSTALHD is not set
 # CONFIG_FB_XGI is not set
-# CONFIG_USB_ENESTORAGE is not set
 # CONFIG_BCM_WIMAX is not set
 # CONFIG_FT1000 is not set
 
@@ -3211,7 +3195,6 @@ CONFIG_ZSMALLOC=y
 CONFIG_ANDROID=y
 CONFIG_ANDROID_BINDER_IPC=y
 CONFIG_ASHMEM=y
-CONFIG_ANDROID_BINDER_IPC_COMPAT_32=y
 CONFIG_ANDROID_LOGGER=y
 CONFIG_ANDROID_LOGGER_PTI=y
 CONFIG_ANDROID_TIMED_OUTPUT=y
@@ -3225,8 +3208,6 @@ CONFIG_SW_SYNC_USER=y
 # CONFIG_USB_WPAN_HCD is not set
 # CONFIG_WIMAX_GDM72XX is not set
 CONFIG_NET_VENDOR_SILICOM=y
-# CONFIG_SBYPASS is not set
-# CONFIG_BPCTL is not set
 # CONFIG_CED1401 is not set
 # CONFIG_DGRP is not set
 # CONFIG_USB_DWC2 is not set
@@ -3466,8 +3447,8 @@ CONFIG_TOUCHSCREEN_SYNAPTICS_I2C_RMI4_FORK=y
 # CONFIG_TOUCHSCREEN_GOODIX_GT9XX is not set
 CONFIG_INPUT_INTEL_MID_VIBRA=y
 # CONFIG_LPSS_DMA is not set
-CONFIG_NFC_PN544_PLATFORM_DATA=y
-CONFIG_NFC_FDP_PLATFORM_DATA=y
+# CONFIG_NFC_PN544_PLATFORM_DATA is not set
+# CONFIG_NFC_FDP_PLATFORM_DATA is not set
 # CONFIG_CHARGER_BQ24192 is not set
 CONFIG_PMIC_CCSM=y
 # CONFIG_BQ24261_CHARGER is not set
@@ -3491,10 +3472,14 @@ CONFIG_DRM_MID_RELEASE=y
 # CONFIG_DRM_MID_DEBUG is not set
 # CONFIG_DRM_MDFLD is not set
 # CONFIG_DRM_CTP is not set
-CONFIG_SUPPORT_HDMI=y
+# CONFIG_SUPPORT_HDMI is not set
 # CONFIG_PVR_PROC is not set
 # CONFIG_GFX_RTPM is not set
 # CONFIG_R63311_MIPI_VIDEO_MODE is not set
+# CONFIG_SUPPORT_MIPI_OTM1284A_DISPLAY is not set
+CONFIG_SUPPORT_MIPI_OTM1901A_DISPLAY=y
+# CONFIG_SUPPORT_MIPI_OTM1284A_TWO_LANES_DISPLAY is not set
+CONFIG_SUPPORT_MIPI_NT35596_DISPLAY=y
 CONFIG_DRM_INTEL_HANDSET=y
 CONFIG_DRM_HANDSET_RELEASE=y
 # CONFIG_DRM_HANDSET_DEBUG is not set
@@ -3507,24 +3492,30 @@ CONFIG_SUPPORT_VSP=y
 CONFIG_GFX_RGX_DEVFREQ=y
 CONFIG_MOOREFIELD=y
 CONFIG_EXTERNAL_CAMERA=y
-CONFIG_VIDEO_ATOMISP=m
+CONFIG_VIDEO_ATOMISP=y
 CONFIG_VIDEO_ATOMISP_TMP=y
 # CONFIG_VIDEO_ATOMISP_CTP is not set
+# CONFIG_VIDEO_ATOMISP_CSS2400_V21 is not set
+CONFIG_VIDEO_ATOMISP_CSS2401_V21=y
+# CONFIG_VIDEO_ATOMISP_CSS2401_LEGACY_V21 is not set
+# CONFIG_VIDEO_ATOMISP_CSS2300 is not set
+CONFIG_VIDEO_T4K37=y
 # CONFIG_VIDEO_MT9E013 is not set
 # CONFIG_VIDEO_OV5693 is not set
-CONFIG_VIDEO_IMX=y
+# CONFIG_VIDEO_IMX is not set
 # CONFIG_VIDEO_IMXVB is not set
+CONFIG_VIDEO_T4K35=n
 # CONFIG_VIDEO_OV9724 is not set
 # CONFIG_VIDEO_OV2722 is not set
 CONFIG_VIDEO_M10MO=y
-# CONFIG_VIDEO_M10MO_FAKE_SFI_TABLE is not set
+CONFIG_VIDEO_M10MO_FAKE_SFI_TABLE=y
 # CONFIG_VIDEO_GC2235 is not set
 # CONFIG_VIDEO_OV8830 is not set
-CONFIG_VIDEO_OV8858=y
+# CONFIG_VIDEO_OV8858 is not set
 # CONFIG_VIDEO_CSI_XACTOR is not set
 CONFIG_VIDEO_MSRLIST_HELPER=y
 # CONFIG_VIDEO_S5K8AAY is not set
-CONFIG_VIDEO_S5K6B2YX=y
+# CONFIG_VIDEO_S5K6B2YX is not set
 # CONFIG_VIDEO_MT9D113 is not set
 # CONFIG_VIDEO_MT9M114 is not set
 # CONFIG_VIDEO_MT9V113 is not set
@@ -3533,13 +3524,18 @@ CONFIG_VIDEO_S5K6B2YX=y
 # CONFIG_VIDEO_HM2056_RAW is not set
 # CONFIG_VIDEO_AP1302 is not set
 # CONFIG_VIDEO_PIXTER is not set
-CONFIG_VIDEO_OV680=y
+# CONFIG_VIDEO_OV680 is not set
+CONFIG_VIDEO_OV5670=y
 # CONFIG_VIDEO_LM3554 is not set
 # CONFIG_VIDEO_LM3642 is not set
-CONFIG_VIDEO_LM3559=y
+# CONFIG_VIDEO_LM3559 is not set
+CONFIG_VIDEO_SKY81296=y
 # CONFIG_EXTERNAL_CAMERA_IPU is not set
-# CONFIG_VIDEO_CSS2600 is not set
-# CONFIG_CSS2600_STUB is not set
+
+#
+# ASUS FACTORY MODE
+#
+# CONFIG_ASUS_FACTORY_MODE is not set
 
 #
 # Firmware Drivers
@@ -3750,7 +3746,6 @@ CONFIG_TIMER_STATS=y
 CONFIG_HAVE_DEBUG_KMEMLEAK=y
 CONFIG_DEBUG_KMEMLEAK=y
 CONFIG_DEBUG_KMEMLEAK_EARLY_LOG_SIZE=400
-# CONFIG_DEBUG_KMEMLEAK_TEST is not set
 CONFIG_DEBUG_KMEMLEAK_DEFAULT_OFF=y
 CONFIG_DEBUG_PREEMPT=y
 # CONFIG_DEBUG_RT_MUTEXES is not set
@@ -3759,9 +3754,7 @@ CONFIG_DEBUG_SPINLOCK=y
 CONFIG_DEBUG_MUTEXES=y
 # CONFIG_DEBUG_LOCK_ALLOC is not set
 # CONFIG_PROVE_LOCKING is not set
-CONFIG_LOCKDEP=y
 # CONFIG_LOCK_STAT is not set
-# CONFIG_DEBUG_LOCKDEP is not set
 CONFIG_TRACE_IRQFLAGS=y
 CONFIG_DEBUG_ATOMIC_SLEEP=y
 # CONFIG_DEBUG_LOCKING_API_SELFTESTS is not set
@@ -3794,7 +3787,6 @@ CONFIG_RCU_CPU_STALL_TIMEOUT=60
 CONFIG_RCU_CPU_STALL_VERBOSE=y
 CONFIG_RCU_CPU_STALL_INFO=y
 # CONFIG_RCU_TRACE is not set
-# CONFIG_KPROBES_SANITY_TEST is not set
 # CONFIG_BACKTRACE_SELF_TEST is not set
 # CONFIG_DEBUG_BLOCK_EXT_DEVT is not set
 # CONFIG_DEBUG_FORCE_WEAK_PER_CPU is not set
@@ -3841,7 +3833,6 @@ CONFIG_BRANCH_PROFILE_NONE=y
 # CONFIG_PROFILE_ALL_BRANCHES is not set
 # CONFIG_STACK_TRACER is not set
 CONFIG_BLK_DEV_IO_TRACE=y
-# CONFIG_KPROBE_EVENT is not set
 # CONFIG_UPROBE_EVENT is not set
 # CONFIG_PROBE_EVENTS is not set
 CONFIG_DYNAMIC_FTRACE=y
@@ -3852,8 +3843,6 @@ CONFIG_FTRACE_MCOUNT_RECORD=y
 # CONFIG_MMIOTRACE is not set
 # CONFIG_RING_BUFFER_BENCHMARK is not set
 # CONFIG_RING_BUFFER_STARTUP_TEST is not set
-# CONFIG_RBTREE_TEST is not set
-# CONFIG_INTERVAL_TREE_TEST is not set
 CONFIG_PROVIDE_OHCI1394_DMA_INIT=y
 CONFIG_DYNAMIC_DEBUG=y
 # CONFIG_DMA_API_DEBUG is not set
@@ -3873,13 +3862,10 @@ CONFIG_EARLY_PRINTK_INTEL_MID=y
 # CONFIG_X86_PTDUMP is not set
 CONFIG_DEBUG_RODATA=y
 # CONFIG_DEBUG_RODATA_TEST is not set
-# CONFIG_DEBUG_SET_MODULE_RONX is not set
-CONFIG_DEBUG_NX_TEST=n
 # CONFIG_DEBUG_TLBFLUSH is not set
 # CONFIG_IOMMU_DEBUG is not set
 # CONFIG_IOMMU_STRESS is not set
 CONFIG_HAVE_MMIOTRACE_SUPPORT=y
-# CONFIG_X86_DECODER_SELFTEST is not set
 CONFIG_IO_DELAY_TYPE_0X80=0
 CONFIG_IO_DELAY_TYPE_0XED=1
 CONFIG_IO_DELAY_TYPE_UDELAY=2
@@ -3894,6 +3880,7 @@ CONFIG_DEBUG_BOOT_PARAMS=y
 CONFIG_OPTIMIZE_INLINING=y
 # CONFIG_DEBUG_NMI_SELFTEST is not set
 CONFIG_INTEL_MID_PSTORE_RAM=y
+CONFIG_LBR_DUMP_ON_EXCEPTION=y
 
 #
 # Security options
@@ -3951,7 +3938,6 @@ CONFIG_CRYPTO_NULL=y
 CONFIG_CRYPTO_WORKQUEUE=y
 CONFIG_CRYPTO_CRYPTD=y
 CONFIG_CRYPTO_AUTHENC=y
-# CONFIG_CRYPTO_TEST is not set
 CONFIG_CRYPTO_ABLK_HELPER_X86=y
 CONFIG_CRYPTO_GLUE_HELPER_X86=y
 
@@ -4064,6 +4050,7 @@ CONFIG_PUBLIC_KEY_ALGO_RSA=y
 CONFIG_X509_CERTIFICATE_PARSER=y
 CONFIG_HAVE_KVM=y
 CONFIG_VIRTUALIZATION=y
+# CONFIG_KVM is not set
 CONFIG_BINARY_PRINTF=y
 
 #
@@ -4124,30 +4111,3 @@ CONFIG_CLZ_TAB=y
 # CONFIG_DDR is not set
 CONFIG_MPILIB=y
 CONFIG_OID_REGISTRY=y
-CONFIG_LBR_DUMP_ON_EXCEPTION=y
-
-#
-# Broadcom WiFi driver
-#
-CONFIG_BCMDHD=y
-CONFIG_BCMDHD_SDIO=y
-# CONFIG_BCM4354 is not set
-CONFIG_BCM4339=y
-CONFIG_BCMDHD_FW_PATH="/system/etc/firmware/fw_bcmdhd.bin"
-CONFIG_BCMDHD_NVRAM_PATH="/system/etc/wifi/bcmdhd.cal"
-# CONFIG_DHD_USE_STATIC_BUF is not set
-# CONFIG_DHD_USE_SCHED_SCAN is not set
-
-CONFIG_ASYNC_FSYNC=y
-CONFIG_BLX=y
-CONFIG_KVM=n
-CONFIG_WQ_POWER_EFFICIENT=y
-CONFIG_QUICK_WAKEUP=y
-CONFIG_F2FS_FS=y
-CONFIG_F2FS_STAT_FS=n
-CONFIG_F2FS_FS_XATTR=y
-CONFIG_F2FS_FS_POSIX_ACL=y
-CONFIG_F2FS_FS_SECURITY=y
-CONFIG_F2FS_CHECK_FS=n
-CONFIG_F2FS_FS_ENCRYPTION=n
-F2FS_IO_TRACE=y
