regen flareX defconfig and add missing files

--- a/arch/x86/configs/flareX_defconfig
+++ b/arch/x86/configs/flareX_defconfig
@@ -323,12 +323,10 @@ CONFIG_IOSCHED_FIFO=y
 CONFIG_IOSCHED_VR=y
 CONFIG_IOSCHED_CFQ=y
 # CONFIG_CFQ_GROUP_IOSCHED is not set
-CONFIG_IOSCHED_BFQ=y
-CONFIG_CGROUP_BFQIO=y
+# CONFIG_IOSCHED_BFQ is not set
 CONFIG_IOSCHED_TRIPNDROID=y
 CONFIG_DEFAULT_DEADLINE=y
 # CONFIG_DEFAULT_CFQ is not set
-# CONFIG_DEFAULT_BFQ is not set
 # CONFIG_DEFAULT_NOOP is not set
 CONFIG_DEFAULT_IOSCHED="deadline"
 CONFIG_ASN1=y
@@ -360,11 +358,24 @@ CONFIG_SCHED_OMIT_FRAME_POINTER=y
 CONFIG_NO_BOOTMEM=y
 # CONFIG_MEMTEST is not set
 # CONFIG_MK8 is not set
+# CONFIG_MK10 is not set
+# CONFIG_MBARCELONA is not set
+# CONFIG_MBOBCAT is not set
+# CONFIG_MBULLDOZER is not set
+# CONFIG_MPILEDRIVER is not set
+# CONFIG_MJAGUAR is not set
 # CONFIG_MPSC is not set
-# CONFIG_MCORE2 is not set
 CONFIG_MATOM=y
+# CONFIG_MCORE2 is not set
+# CONFIG_MNEHALEM is not set
+# CONFIG_MWESTMERE is not set
+# CONFIG_MSANDYBRIDGE is not set
+# CONFIG_MIVYBRIDGE is not set
+# CONFIG_MHASWELL is not set
+# CONFIG_MBROADWELL is not set
 # CONFIG_MSLM is not set
 # CONFIG_GENERIC_CPU is not set
+# CONFIG_MNATIVE is not set
 CONFIG_X86_INTERNODE_CACHE_SHIFT=6
 CONFIG_X86_L1_CACHE_SHIFT=6
 CONFIG_X86_USE_PPRO_CHECKSUM=y
@@ -440,6 +451,8 @@ CONFIG_ZONE_DMA_FLAG=1
 CONFIG_BOUNCE=y
 CONFIG_VIRT_TO_BUS=y
 CONFIG_KSM=y
+# CONFIG_UKSM is not set
+CONFIG_KSM_LEGACY=y
 CONFIG_DEFAULT_MMAP_MIN_ADDR=4096
 CONFIG_ARCH_SUPPORTS_MEMORY_FAILURE=y
 # CONFIG_MEMORY_FAILURE is not set
@@ -483,6 +496,7 @@ CONFIG_ARCH_ENABLE_MEMORY_HOTPLUG=y
 #
 CONFIG_SUSPEND=y
 CONFIG_SUSPEND_FREEZER=y
+# CONFIG_POWERSUSPEND is not set
 CONFIG_HAS_WAKELOCK=y
 CONFIG_HAS_EARLYSUSPEND=y
 CONFIG_WAKELOCK=y
@@ -508,6 +522,7 @@ CONFIG_ARCH_HAS_OPP=y
 CONFIG_PM_OPP=y
 CONFIG_PM_CLK=y
 CONFIG_WQ_POWER_EFFICIENT=y
+# CONFIG_WQ_POWER_EFFICIENT_DEFAULT is not set
 CONFIG_SUSPEND_TIME=y
 CONFIG_QUICK_WAKEUP=y
 # CONFIG_ACPI is not set
@@ -1333,6 +1348,7 @@ CONFIG_SLHC=y
 # CONFIG_USB_CATC is not set
 # CONFIG_USB_KAWETH is not set
 # CONFIG_USB_PEGASUS is not set
+# CONFIG_USB_QF9700 is not set
 CONFIG_USB_RTL8150=y
 CONFIG_USB_RTL8152=y
 CONFIG_USB_USBNET=y
@@ -2820,6 +2836,7 @@ CONFIG_USB_SERIAL_PL2303=y
 # CONFIG_USB_SERIAL_ZTE is not set
 # CONFIG_USB_SERIAL_SSU100 is not set
 # CONFIG_USB_SERIAL_QT2 is not set
+# CONFIG_USB_SERIAL_SUUNTO is not set
 # CONFIG_USB_SERIAL_DEBUG is not set
 
 #
@@ -3811,6 +3828,7 @@ CONFIG_NLS_ISO8859_1=y
 CONFIG_NLS_UTF8=y
 # CONFIG_DLM is not set
 CONFIG_ASYNC_FSYNC=y
+# CONFIG_DYNAMIC_FSYNC is not set
 
 #
 # Kernel hacking
