--- a/arch/x86/configs/flareX_defconfig
+++ b/arch/x86/configs/flareX_defconfig
@@ -496,7 +496,7 @@ CONFIG_ARCH_ENABLE_MEMORY_HOTPLUG=y
 #
 CONFIG_SUSPEND=y
 CONFIG_SUSPEND_FREEZER=y
-# CONFIG_POWERSUSPEND is not set
+CONFIG_POWERSUSPEND=y
 CONFIG_HAS_WAKELOCK=y
 CONFIG_HAS_EARLYSUSPEND=y
 CONFIG_WAKELOCK=y
@@ -3828,7 +3828,7 @@ CONFIG_NLS_ISO8859_1=y
 CONFIG_NLS_UTF8=y
 # CONFIG_DLM is not set
 CONFIG_ASYNC_FSYNC=y
-# CONFIG_DYNAMIC_FSYNC is not set
+CONFIG_DYNAMIC_FSYNC=y
 
 #
 # Kernel hacking
